--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
   <h1 style="text-align:center">Open the Console to See the Magic ✨</h1>
 
-  <script src="script.js"></script>
-
+ <script src="./script.js"></script>
+    <button onclick = "userPrompt()"> PLAY</button>
 </body>
 </html>
